--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content=""
     />
+
+    <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,400i,700&display=swap" rel="stylesheet"> 
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,6 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script> -->
     <title>React App</title>
   </head>
   <body>
