--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,9 @@
       name="description"
       content=""
     />
-
+    
     <link href="https://fonts.googleapis.com/css?family=Raleway:100,400,400i,700&display=swap" rel="stylesheet"> 
+    <script src="https://kit.fontawesome.com/499faa2bb5.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,6 +29,7 @@
     -->
     <!-- <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script> -->
     <title>React App</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
