--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <!-- <script src="https://cdn.rawgit.com/progers/pathseg/master/pathseg.js"></script> -->
-    <title>Smart Absence - Face Recognition based</title>
+    <title>Recognisight | Face Recognition based absence</title>
 
   </head>
   <body>
